Fix alignment on search

--- a/components/Search/Search.module.scss
+++ b/components/Search/Search.module.scss
@@ -23,7 +23,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: center;
 
     .resultWrapper {
       display: flex;
